{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 126,
  "lineage": "256c3541-a7d2-719b-6348-303bd83eb534",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dara_nginx1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-014d544cfef21b42d",
            "arn": "arn:aws:ec2:us-east-1:485758492827:instance/i-0e39a40ff67c7bb87",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "nginx_profile",
            "id": "i-0e39a40ff67c7bb87",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e33d2960262b042d",
            "private_dns": "ip-10-0-0-31.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.31",
            "public_dns": "ec2-44-203-98-210.compute-1.amazonaws.com",
            "public_ip": "44.203.98.210",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d87f49e1ad2f9550",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-035500e84d3a6acb0",
            "tags": {
              "CreatorId": "AROAXCGLWMCNUAZBBA3H2",
              "CreatorName": "darasimi.oluwaniyi@slalom.com",
              "Email": "darasimi.oluwaniyi@slalom.com",
              "Engagement_Office": "Austin",
              "Manager": "Chris Wahl",
              "Market": "Local",
              "Name": "Darasimi Oluwaniyi",
              "billing_code": "aba",
              "company": "luwan",
              "project": "luwan-luwan-01"
            },
            "tags_all": {
              "CreatorId": "AROAXCGLWMCNUAZBBA3H2",
              "CreatorName": "darasimi.oluwaniyi@slalom.com",
              "Email": "darasimi.oluwaniyi@slalom.com",
              "Engagement_Office": "Austin",
              "Manager": "Chris Wahl",
              "Market": "Local",
              "Name": "Darasimi Oluwaniyi",
              "billing_code": "aba",
              "company": "luwan",
              "project": "luwan-luwan-01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c89959115a86fd43"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.nginx_profile",
            "aws_iam_role.allow_nginx_s3",
            "aws_iam_role_policy.allow_s3_all",
            "aws_s3_bucket.luwan_s3",
            "aws_security_group.dara_sg",
            "aws_subnet.darasimi_public_subnet1",
            "aws_vpc.darasimi_vpc",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.amzn2_linux",
            "random_integer.s3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dara_nginx2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-014d544cfef21b42d",
            "arn": "arn:aws:ec2:us-east-1:485758492827:instance/i-03c91579cb5bd8220",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "nginx_profile",
            "id": "i-03c91579cb5bd8220",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08ddb3ad36da1c2e3",
            "private_dns": "ip-10-0-1-33.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.33",
            "public_dns": "ec2-54-167-108-89.compute-1.amazonaws.com",
            "public_ip": "54.167.108.89",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0553d6db17770fc54",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0faa688f21d18083b",
            "tags": {
              "CreatorId": "AROAXCGLWMCNUAZBBA3H2",
              "CreatorName": "darasimi.oluwaniyi@slalom.com",
              "Email": "darasimi.oluwaniyi@slalom.com",
              "Engagement_Office": "Austin",
              "Manager": "Chris Wahl",
              "Market": "Local",
              "Name": "Darasimi Oluwaniyi",
              "billing_code": "aba",
              "company": "luwan",
              "project": "luwan-luwan-01"
            },
            "tags_all": {
              "CreatorId": "AROAXCGLWMCNUAZBBA3H2",
              "CreatorName": "darasimi.oluwaniyi@slalom.com",
              "Email": "darasimi.oluwaniyi@slalom.com",
              "Engagement_Office": "Austin",
              "Manager": "Chris Wahl",
              "Market": "Local",
              "Name": "Darasimi Oluwaniyi",
              "billing_code": "aba",
              "company": "luwan",
              "project": "luwan-luwan-01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c89959115a86fd43"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.nginx_profile",
            "aws_iam_role.allow_nginx_s3",
            "aws_iam_role_policy.allow_s3_all",
            "aws_s3_bucket.luwan_s3",
            "aws_security_group.dara_sg",
            "aws_subnet.darasimi_public_subnet2",
            "aws_vpc.darasimi_vpc",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.amzn2_linux",
            "random_integer.s3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "darasimi_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:485758492827:internet-gateway/igw-070ab89286523a1c6",
            "id": "igw-070ab89286523a1c6",
            "owner_id": "485758492827",
            "tags": {
              "Name": "darasimi-ig"
            },
            "tags_all": {
              "Name": "darasimi-ig"
            },
            "vpc_id": "vpc-06ccc38b85f9a6355"
          },
          "dependencies": [
            "aws_vpc.darasimi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "darasimi_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:485758492827:loadbalancer/app/darasimi-lb/3c759f78ea559fef",
            "arn_suffix": "app/darasimi-lb/3c759f78ea559fef",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "darasimi-lb-2123862360.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:485758492827:loadbalancer/app/darasimi-lb/3c759f78ea559fef",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "darasimi-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b7ec64776129c20a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-035500e84d3a6acb0"
              },
              {
                "subnet_id": "subnet-0faa688f21d18083b"
              }
            ],
            "subnets": [
              "subnet-035500e84d3a6acb0",
              "subnet-0faa688f21d18083b"
            ],
            "tags": {
              "Email": "darasimi.oluwaniyi@slalom.com",
              "Engagement_Office": "Austin",
              "Manager": "Chris Wahl",
              "Market": "Local",
              "Name": "Darasimi Oluwaniyi",
              "billing_code": "aba",
              "company": "luwan",
              "project": "luwan-luwan-01"
            },
            "tags_all": {
              "Email": "darasimi.oluwaniyi@slalom.com",
              "Engagement_Office": "Austin",
              "Manager": "Chris Wahl",
              "Market": "Local",
              "Name": "Darasimi Oluwaniyi",
              "billing_code": "aba",
              "company": "luwan",
              "project": "luwan-luwan-01"
            },
            "vpc_id": "vpc-06ccc38b85f9a6355",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.dara_alb_sg",
            "aws_subnet.darasimi_public_subnet1",
            "aws_subnet.darasimi_public_subnet2",
            "aws_vpc.darasimi_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "darasimi_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:485758492827:listener/app/darasimi-lb/3c759f78ea559fef/1c3897e9e860ace5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:485758492827:targetgroup/darasimi-tg/90cbe430fa26b849",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:485758492827:listener/app/darasimi-lb/3c759f78ea559fef/1c3897e9e860ace5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:485758492827:loadbalancer/app/darasimi-lb/3c759f78ea559fef",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.darasimi_lb",
            "aws_lb_target_group.darasimi_tg",
            "aws_security_group.dara_alb_sg",
            "aws_subnet.darasimi_public_subnet1",
            "aws_subnet.darasimi_public_subnet2",
            "aws_vpc.darasimi_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "darasimi_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:485758492827:targetgroup/darasimi-tg/90cbe430fa26b849",
            "arn_suffix": "targetgroup/darasimi-tg/90cbe430fa26b849",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:485758492827:targetgroup/darasimi-tg/90cbe430fa26b849",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:485758492827:loadbalancer/app/darasimi-lb/3c759f78ea559fef"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "darasimi-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06ccc38b85f9a6355"
          },
          "dependencies": [
            "aws_vpc.darasimi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "darasimi_tg_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:485758492827:targetgroup/darasimi-tg/90cbe430fa26b849-20240301211035237600000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:485758492827:targetgroup/darasimi-tg/90cbe430fa26b849",
            "target_id": "i-0e39a40ff67c7bb87"
          },
          "dependencies": [
            "aws_iam_instance_profile.nginx_profile",
            "aws_iam_role.allow_nginx_s3",
            "aws_iam_role_policy.allow_s3_all",
            "aws_instance.dara_nginx1",
            "aws_lb_target_group.darasimi_tg",
            "aws_s3_bucket.luwan_s3",
            "aws_security_group.dara_sg",
            "aws_subnet.darasimi_public_subnet1",
            "aws_vpc.darasimi_vpc",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.amzn2_linux",
            "random_integer.s3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "darasimi_tg_attach2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:485758492827:targetgroup/darasimi-tg/90cbe430fa26b849-20240301211032191500000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:485758492827:targetgroup/darasimi-tg/90cbe430fa26b849",
            "target_id": "i-03c91579cb5bd8220"
          },
          "dependencies": [
            "aws_iam_instance_profile.nginx_profile",
            "aws_iam_role.allow_nginx_s3",
            "aws_iam_role_policy.allow_s3_all",
            "aws_instance.dara_nginx2",
            "aws_lb_target_group.darasimi_tg",
            "aws_s3_bucket.luwan_s3",
            "aws_security_group.dara_sg",
            "aws_subnet.darasimi_public_subnet2",
            "aws_vpc.darasimi_vpc",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.amzn2_linux",
            "random_integer.s3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "darasimi_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:485758492827:route-table/rtb-0ad05df1a69d8e773",
            "id": "rtb-0ad05df1a69d8e773",
            "owner_id": "485758492827",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-070ab89286523a1c6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "darasimi-rt"
            },
            "tags_all": {
              "Name": "darasimi-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ccc38b85f9a6355"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.darasimi_ig",
            "aws_vpc.darasimi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "darasimi_rt_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07ea60e0bd261405c",
            "route_table_id": "rtb-0ad05df1a69d8e773",
            "subnet_id": "subnet-035500e84d3a6acb0"
          },
          "dependencies": [
            "aws_internet_gateway.darasimi_ig",
            "aws_route_table.darasimi_rt",
            "aws_subnet.darasimi_public_subnet1",
            "aws_vpc.darasimi_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "darasimi_rt_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0cc87f240e53537",
            "route_table_id": "rtb-0ad05df1a69d8e773",
            "subnet_id": "subnet-0faa688f21d18083b"
          },
          "dependencies": [
            "aws_internet_gateway.darasimi_ig",
            "aws_route_table.darasimi_rt",
            "aws_subnet.darasimi_public_subnet2",
            "aws_vpc.darasimi_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dara_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:485758492827:security-group/sg-0b7ec64776129c20a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b7ec64776129c20a",
            "ingress": [
              {
                "cidr_blocks": [
                  "128.136.104.5/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dara_nginx_alb",
            "name_prefix": "",
            "owner_id": "485758492827",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "darasimi-sg"
            },
            "tags_all": {
              "Name": "darasimi-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ccc38b85f9a6355"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.darasimi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dara_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:485758492827:security-group/sg-0c89959115a86fd43",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c89959115a86fd43",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_sg",
            "name_prefix": "",
            "owner_id": "485758492827",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "darasimi-sg"
            },
            "tags_all": {
              "Name": "darasimi-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ccc38b85f9a6355"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.darasimi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "darasimi_public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:485758492827:subnet/subnet-035500e84d3a6acb0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-035500e84d3a6acb0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "485758492827",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "darasimi-public-subnet-1"
            },
            "tags_all": {
              "Name": "darasimi-public-subnet-1"
            },
            "vpc_id": "vpc-06ccc38b85f9a6355"
          },
          "dependencies": [
            "aws_vpc.darasimi_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "darasimi_public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:485758492827:subnet/subnet-0faa688f21d18083b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0faa688f21d18083b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "485758492827",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "darasimi-public-subnet-2"
            },
            "tags_all": {
              "Name": "darasimi-public-subnet-2"
            },
            "vpc_id": "vpc-06ccc38b85f9a6355"
          },
          "dependencies": [
            "aws_vpc.darasimi_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "darasimi_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:485758492827:vpc/vpc-06ccc38b85f9a6355",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08bdadc401f678358",
            "default_route_table_id": "rtb-07a7acb2525f7350f",
            "default_security_group_id": "sg-080574e860d5d65f7",
            "dhcp_options_id": "dopt-a1efb0da",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06ccc38b85f9a6355",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07a7acb2525f7350f",
            "owner_id": "485758492827",
            "tags": {
              "Name": "darasimi-vpc"
            },
            "tags_all": {
              "Name": "darasimi-vpc"
            }
          }
        }
      ]
    }
  ]
}